@@ -70,6 +70,7 @@ struct coro {
   SV **stack_sp;
   OP *op;
   SV **curpad;
+  AV *comppad;
   SV **stack_base;
   SV **stack_max;
   SV **tmps_stack;
@@ -292,6 +293,7 @@ load_state(pTHX_ Coro__State c)
   PL_stack_sp = c->stack_sp;
   PL_op = c->op;
   PL_curpad = c->curpad;
+  PL_comppad = c->comppad;
   PL_stack_base = c->stack_base;
   PL_stack_max = c->stack_max;
   PL_tmps_stack = c->tmps_stack;
@@ -421,6 +423,7 @@ save_state(pTHX_ Coro__State c, int flags)
   c->stack_sp = PL_stack_sp;
   c->op = PL_op;
   c->curpad = PL_curpad;
+  c->comppad = PL_comppad;
   c->stack_base = PL_stack_base;
   c->stack_max = PL_stack_max;
   c->tmps_stack = PL_tmps_stack;
